--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "race-nutrition-calculator",
+  "name": "holiday-nutrition-planner",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.0",
+    "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "@vercel/analytics": "^1.1.1",
-    "@vercel/speed-insights": "^1.0.0"
+    "@vercel/speed-insights": "^1.0.2"
   }
 }
